# markdownlint-mcp

./: .envrc  .gitignore  GEMINI.md  README-dev.md  README.md  package-lock.json  pyproject.toml  readme-hello.md
.gemini/: settings.json
scripts/: setup.sh
src/agent_multitool/: main.py
src/markdownlint_mcp/: main.py
src/md_lint_mcp/: formatters.py  linters.py  main.py  server.py  watcher.py
