[project]
name = "md-lint-mcp"
version = "0.1.0"
description = "A comprehensive FastMCP server to lint and fix markdown violations using markdownlint-cli2."
readme = "README.md"
authors = [
    { name = "en-ver" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx"
]

[project.scripts]
md-lint-mcp-server = "md_lint_mcp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
