[project]
name = "md-lint-mcp"
version = "0.1.0"
description = "A comprehensive FastMCP server to lint and fix markdown violations using markdownlint-cli."
readme = "README.md"
authors = [
    { name = "en-ver" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx"
]

[project.scripts]
md-lint-mcp = "md_lint_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
