[project]
name = "agent-multitool"
version = "0.1.0"
description = "A comprehensive FastMCP server to lint and fix markdown violations using markdownlint-cli."
readme = "README.md"
authors = [
    { name = "en-ver" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx"
]

[project.scripts]
agent-multitool = "agent_multitool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
